// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrugChartWrapper matches snapshot 1`] = `
<div>
  <div
    class="drugchart-parent-container display-container"
  >
    <div
      class="drugchart-shift-header"
    >
      <button
        class="margin-right-10 bx--btn bx--btn--tertiary bx--btn--expressive"
        data-testid="currentShift"
        tabindex="0"
        type="button"
      >
        Current Shift
      </button>
      <button
        class="margin-right-6 bx--btn bx--btn--tertiary bx--btn--expressive bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--top bx--tooltip--align-center"
        data-testid="previousButton"
        tabindex="0"
        type="button"
      >
        <div
          class="bx--assistive-text"
        />
        <svg
          aria-hidden="true"
          class="bx--btn__icon"
          fill="currentColor"
          focusable="false"
          height="16"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 8L10 3 10.7 3.7 6.4 8 10.7 12.3 10 13z"
          />
        </svg>
      </button>
      <button
        class="margin-right-10 bx--btn bx--btn--tertiary bx--btn--expressive bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--top bx--tooltip--align-center"
        data-testid="nextButton"
        tabindex="0"
        type="button"
      >
        <div
          class="bx--assistive-text"
        />
        <svg
          aria-hidden="true"
          class="bx--btn__icon"
          fill="currentColor"
          focusable="false"
          height="16"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 8L6 13 5.3 12.3 9.6 8 5.3 3.7 6 3z"
          />
        </svg>
      </button>
      <span>
        05 Jan 2024 | 06:00 - 05 Jan 2024 | 18:00
      </span>
    </div>
    <div
      class="loading-parent"
      data-testid="loading-icon"
    >
      <div
        aria-atomic="true"
        aria-live="assertive"
        class="bx--loading"
      >
        <label
          class="bx--visually-hidden"
          id="loading-id-1"
        >
          Active loading indicator
        </label>
        <svg
          class="bx--loading__svg"
          viewBox="0 0 100 100"
        >
          <title>
            Active loading indicator
          </title>
          <circle
            class="bx--loading__stroke"
            cx="50%"
            cy="50%"
            r="44"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`DrugChartWrapper should render loading state when isLoading is true 1`] = `
<div>
  <div
    class="drugchart-parent-container display-container"
  >
    <div
      class="drugchart-shift-header"
    >
      <button
        class="margin-right-10 bx--btn bx--btn--tertiary bx--btn--expressive"
        data-testid="currentShift"
        tabindex="0"
        type="button"
      >
        Current Shift
      </button>
      <button
        class="margin-right-6 bx--btn bx--btn--tertiary bx--btn--expressive bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--top bx--tooltip--align-center"
        data-testid="previousButton"
        tabindex="0"
        type="button"
      >
        <div
          class="bx--assistive-text"
        />
        <svg
          aria-hidden="true"
          class="bx--btn__icon"
          fill="currentColor"
          focusable="false"
          height="16"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 8L10 3 10.7 3.7 6.4 8 10.7 12.3 10 13z"
          />
        </svg>
      </button>
      <button
        class="margin-right-10 bx--btn bx--btn--tertiary bx--btn--expressive bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--top bx--tooltip--align-center"
        data-testid="nextButton"
        tabindex="0"
        type="button"
      >
        <div
          class="bx--assistive-text"
        />
        <svg
          aria-hidden="true"
          class="bx--btn__icon"
          fill="currentColor"
          focusable="false"
          height="16"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 8L6 13 5.3 12.3 9.6 8 5.3 3.7 6 3z"
          />
        </svg>
      </button>
      <span>
        05 Jan 2024 | 06:00 - 05 Jan 2024 | 18:00
      </span>
    </div>
    <div
      class="loading-parent"
      data-testid="loading-icon"
    >
      <div
        aria-atomic="true"
        aria-live="assertive"
        class="bx--loading"
      >
        <label
          class="bx--visually-hidden"
          id="loading-id-5"
        >
          Active loading indicator
        </label>
        <svg
          class="bx--loading__svg"
          viewBox="0 0 100 100"
        >
          <title>
            Active loading indicator
          </title>
          <circle
            class="bx--loading__stroke"
            cx="50%"
            cy="50%"
            r="44"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
